--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -1,8 +1,10 @@
 .header {
   width: 100%;
   height: 48px;
-  border-radius: 1rem;
-  background: $white;
+  padding: 12px 12px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 8px;
   @include screen_md {
     height: 64px;
@@ -13,12 +15,14 @@
 }
 
 .header__wrapper {
-  width: 100%;
+  width: calc(100% - 24px);
   height: 100%;
   padding: 8px 12px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-radius: 1rem;
+  background: $white;
   @include screen_bg {
     padding: 14px 20px;
   }
@@ -46,10 +50,26 @@
 }
 
 .nav__item {
+  position: relative;
   @extend %font_14;
   color: $dark;
   text-transform: uppercase;
   text-decoration: none;
+  &::after {
+    position: absolute;
+    content: "";
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 1px;
+    background: $dark;
+    transition: all 0.5s ease-in-out;
+  }
+  &:hover {
+    &::after {
+      width: 100%;
+    }
+  }
 }
 
 .header__menu {
@@ -128,9 +148,13 @@
   gap: 16px;
   text-decoration: none;
   border-radius: 1rem;
+  transition: all 0.3s ease-in-out;
   @include screen_bg {
     background: $gray;
     padding: 3px 3px 3px 16px;
+    &:hover {
+      background: rgba($dark, 0.2);
+    }
   }
 }
 
@@ -147,4 +171,55 @@
   width: 32px;
   height: 32px;
   border-radius: 3rem;
+}
+
+.mobile__menu {
+  position: absolute;
+  top: -100vh;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 80px;
+  background: $white;
+  z-index: 1;
+  transition: all 1s ease-in-out;
+}
+
+.menu__active {
+  top: 0;
+}
+
+.mobile__menu__wrapper {
+  position: relative;
+  width: auto;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
+}
+
+.mobile__menu__item {
+  @extend %font_16;
+  color: $dark;
+}
+
+.menu__cross {
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 32px;
+  height: 32px;
+}
+
+.cross__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
